--- a/002.CSS학습/05.3DAni/css/opendoor.css
+++ b/002.CSS학습/05.3DAni/css/opendoor.css
@@ -12,9 +12,9 @@ html,body,h1{
 }
 
 /* 공사중 */
-body *{
+/* body *{
     outline: 2px dashed red;
-}
+} */
 
 body{
     background-color: #9c0;
@@ -66,8 +66,11 @@ body{
         -> 기준축으로 부터 소실점까지의 거리
         -> 이 값이 커지면 원근 각도가 완만해짐
      **************************************************************/
-     perspective: 480px;
+     perspective: 1000px;
+
+
 }
+
 
 /* 문짝 */
 .door{
@@ -80,15 +83,76 @@ body{
     /* Y축 회전  */
     transform: rotateY(0deg);
     transform-origin: left;
-
+    
     /* 애니메이션 */
-    animation: open-door-ani 1s ease-in-out infinite alternate;
+    animation: 
+    open-ani 1s ease-in-out forwards,
+    open-door-ani 2s ease-in-out 1s infinite alternate;
+    
+    /* 처음에 멈춤상태로 애니메이션 세팅 */
+    animation-play-state: paused;
+    z-index: 1;
+
+    
 }
 
+
+
+/* .cont에 마우스 오버시 문 여닫기 */
+.cont:hover .door{
+    animation-play-state: running;
+}
+@keyframes open-ani {
+    100%{
+        transform: rotateY(40deg);
+    }   
+}
 /* 문 여닫기 키프레임 */
 @keyframes open-door-ani {
+    0%{
+        transform: rotateY(40deg);
+    }
     100%{
-        transform: rotateY(60deg);
+        transform: rotateY(-40deg);
+    }
+    
+}
+
+/* 손잡이 */
+.handle{
+    position: absolute;
+    top: calc(50% - 50px/2);
+    right: 2%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: blue;
+}
+
+#elsa{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+}
+
+#elsa img{
+    margin-top: 110px;
+    margin-left: 331px;
+    transform-origin: bottom;
+    transform: rotate(360deg);
+    animation: elsa-ani 1s ease-in-out infinite alternate;
+    animation-play-state: paused;
+}
+
+.cont:hover #elsa>img{
+    animation-play-state: running;
+}
+@keyframes elsa-ani {
+    to{
+        transform: rotate(351deg)
     }
     
 }
