--- a/002.CSS학습/05.3DAni/css/solar2d.css
+++ b/002.CSS학습/05.3DAni/css/solar2d.css
@@ -203,6 +203,14 @@ body{
     width .4s,
     max-height .4s .4s;
     box-shadow: 0 0 20px 3px rgb(0, 166, 255);
+
+    animation: info-ani .2s ease-out .2s 2;
+}
+@keyframes info-ani {
+    100%{
+        transform: rotateY(40deg) rotateY(90deg);
+    }
+    
 }
 
 /* ----------------------------------------------------------------- */
