--- a/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
@@ -2,7 +2,7 @@
 
 /* 네비게이션 유형1 CSS - nav01.css */
 /* 12그리드 불러오기 */
-@import url(./grid_12_float.css);
+@import url(./grid_12_flex.css);
 
 html,
 body,
@@ -54,19 +54,27 @@ ul::after, ol::after, .clb{
 
 /* gnb메뉴 */
 .gnb{
-    margin-left: 63px;
+    /* ul이 플렉스 박스임으로 정렬은 ul에서 하기로함 */
+    /* margin-left: 63px; */
 }
 
 /* gnb메뉴 하위 a요소 */
 .gnb a{
     display: block;
 }
-
+/* 메뉴 플렉스박스 설정 */
+.gnb ul{
+display: flex;
+/* 메뉴 글자 줄바꿈 방지 */
+white-space: nowrap;
+/* 진행방향 오른쪽 끝 정렬 */
+justify-content: flex-end;
+}
 /* 상위메뉴만 적용하기 */
 .gnb ul>li{
     /* smenu left값 - 부모자격 */
     position: relative;
-    float: left;
+    /* float: left; ->flex로 전환 */
     padding: 0px 32px;
     /* 글자관련 셋팅은 하위요소로 상속됨 */
     line-height: 78px;
