--- a/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
@@ -7,124 +7,127 @@
 html,
 body,
 h1 {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 h1.tit {
-    text-align: center;
-    padding: 20px;
+  text-align: center;
+  padding: 20px;
 }
 
 /* 전체body */
-body{
-    color: #fff;
-    background: rgb(7 17 75) url(../images/nav1bg.png) no-repeat fixed center/cover;
+body {
+  color: #fff;
+  background: rgb(7 17 75) url(../images/nav1bg.png) no-repeat fixed
+    center/cover;
 }
 
 /* ul,ol초기화 */
-ul,ol{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /* 공통 a요소 */
-a{
-    color: #fff;
-    text-decoration: none;
+a {
+  color: #fff;
+  text-decoration: none;
 }
 
 /* 공통 클래스 : 클리어 */
-ul::after, ol::after, .clb{
-    content: '';
-    display: block;
+ul::after,
+ol::after,
+.clb {
+  content: "";
+  display: block;
 }
 
 /* 중앙속박스 */
-.inbox{
-    max-width: 1650px;
-    margin: 0 auto;
-    outline: 2px dashed lime;
+.inbox {
+  max-width: 1650px;
+  margin: 0 auto;
+  outline: 2px dashed lime;
 }
 
 /* 로고 */
-.logo{
-    padding: 13px 0;
+.logo {
+  padding: 13px 0;
 }
 
 /* gnb메뉴 */
-.gnb{
-    /* ul이 플렉스 박스임으로 정렬은 ul에서 하기로함 */
-    /* margin-left: 63px; */
+.gnb {
+  /* ul이 플렉스 박스임으로 정렬은 ul에서 하기로함 */
+  /* margin-left: 63px; */
 }
 
 /* gnb메뉴 하위 a요소 */
-.gnb a{
-    display: block;
+.gnb a {
+  display: block;
 }
 /* 메뉴 플렉스박스 설정 */
-.gnb ul{
-display: flex;
-/* 메뉴 글자 줄바꿈 방지 */
-white-space: nowrap;
-/* 진행방향 오른쪽 끝 정렬 */
-justify-content: flex-end;
+.gnb ul {
+  display: flex;
+  /* 메뉴 글자 줄바꿈 방지 */
+  white-space: nowrap;
+  /* 진행방향 오른쪽 끝 정렬 */
+  justify-content: flex-end;
 }
 /* 상위메뉴만 적용하기 */
-.gnb ul>li{
-    /* smenu left값 - 부모자격 */
-    position: relative;
-    /* float: left; ->flex로 전환 */
-    padding: 27px 32px;
-    /* 글자관련 셋팅은 하위요소로 상속됨 */
-    /* line-height: 78px; -> 블록 가상요소 밑줄이 아래로 밀림 */
-    font-weight: bold;
+.gnb ul > li {
+  /* smenu left값 - 부모자격 */
+  position: relative;
+  /* float: left; ->flex로 전환 */
+  padding: 27px 32px;
+  /* 글자관련 셋팅은 하위요소로 상속됨 */
+  /* line-height: 78px; -> 블록 가상요소 밑줄이 아래로 밀림 */
+  font-weight: bold;
 }
 
 /* 서브메뉴 */
-.smenu{
-    position: absolute;
-    margin-top: 20px;
-    left: 50%;
-    /* X축 중앙이동 */
-    transform: translateX(-50%);
+.smenu {
+  position: absolute;
+  margin-top: 20px;
+  left: 50%;
+  /* X축 중앙이동 */
+  transform: translateX(-50%);
 
-    width: 200px;
-    background-color: #0000003f;
-    border-radius: 10px;
-    box-shadow: inset 0 0 10px lightpink;
+  width: 200px;
+  background-color: #0000003f;
+  border-radius: 10px;
+  box-shadow: inset 0 0 10px lightpink;
 
-    text-align: center;
-    line-height: 38px;
+  text-align: center;
+  line-height: 38px;
 
-    font-weight: normal;
-    
-    /* 패딩이 있으면 높이값0 숨기기가 안됨 그래서 하위요소인 ol태그에 패딩줌 */
-    /* padding: 5px; */
+  font-weight: normal;
 
-    /* 숨기기장치 */
-    /* height: 0; */
-    max-height: 0;
-    overflow: hidden;
+  /* 패딩이 있으면 높이값0 숨기기가 안됨 그래서 하위요소인 ol태그에 패딩줌 */
+  /* padding: 5px; */
 
-    /* 트랜지션 */
-    transition: max-height 0.4s;
-    
+  /* 숨기기장치 */
+  /* height: 0; */
+  max-height: 0;
+  overflow: hidden;
+
+  /* 트랜지션 */
+  transition: max-height 0.4s;
 }
 
 /* 상위 li오버시 서브메뉴 보이기 */
-.gnb ul>li:hover .smenu{
-    /* max-height로 세팅하는 원리는
+.gnb ul > li:hover .smenu {
+  /* max-height로 세팅하는 원리는
     최대높이값은 컨텐츠내용이 적을 때 auto하게 내용물만큼만 높이값이 세팅됨
     따라서 세팅 높이값은 최대로 세팅해야하는 높이값으로 적용해야함.
     (단, 작은 크기는 시간이 짧게 표현됨)
     
     max로할거면 트렌지션도 max로! 바꾸거나 all로 해야함*/
-    max-height: 210px;
+  max-height: 210px;
 
-    /* height: 210px; */
-    /* height: auto; */
-    /* 
+  /* height: 210px; */
+  /* height: auto; */
+  /* 
      높이값 변경 트랜지션 주의사항
         -> auto로 셋팅하면 특정 크기로 변경할 때만 적용되는 트랜지션이 적용되지 않음
         height 셋팅시에는 변할 실제 크기를 셋팅해야함
@@ -138,46 +141,44 @@ justify-content: flex-end;
     height: 58px;
 } */
 
-.smenu ol{
-    padding: 10px;
+.smenu ol {
+  padding: 10px;
 }
 /* 서브메뉴 li 순서대로 나타나기 */
-.smenu li{
-    /* 투명하게 */
-    opacity: 0;
-    /* 트랜지션 */
-    transition: all .4s;
-    
+.smenu li {
+  /* 투명하게 */
+  opacity: 0;
+  /* 트랜지션 */
+  transition: all 0.4s;
 }
 
 /* *********************여기 잘 볼 것**************************** */
 /* 상위메뉴 오버시 */
-.gnb ul>li:hover .smenu li{
-    opacity: 1;
+.gnb ul > li:hover .smenu li {
+  opacity: 1;
 }
 /* 하위 메뉴 a요소 opacity 조정 */
-.gnb ul>li .smenu li a{
-    opacity: .5;
+.gnb ul > li .smenu li a {
+  opacity: 0.5;
 }
 /* 하위 메뉴 a요소 opacity 조정 */
-.gnb ul>li .smenu li a:hover{
-    opacity: 1;
-    font-weight: bold;
+.gnb ul > li .smenu li a:hover {
+  opacity: 1;
+  font-weight: bold;
 }
-
 
 /* 오버시 li순서별 트랜지션 dealy주기 */
-.gnb ul>li:hover .smenu li:nth-child(2){
-    transition-delay: 0.2s;
+.gnb ul > li:hover .smenu li:nth-child(2) {
+  transition-delay: 0.2s;
 }
-.gnb ul>li:hover .smenu li:nth-child(3){
-    transition-delay: 0.3s;
+.gnb ul > li:hover .smenu li:nth-child(3) {
+  transition-delay: 0.3s;
 }
-.gnb ul>li:hover .smenu li:nth-child(4){
-    transition-delay: 0.4s;
+.gnb ul > li:hover .smenu li:nth-child(4) {
+  transition-delay: 0.4s;
 }
-.gnb ul>li:hover .smenu li:nth-child(5){
-    transition-delay: 0.5s;
+.gnb ul > li:hover .smenu li:nth-child(5) {
+  transition-delay: 0.5s;
 }
 
 /* 가상요소를 위한 부모자격 - 불필요 */
@@ -189,38 +190,53 @@ justify-content: flex-end;
 -->uline이라는 클래스를 주면됨
 */
 /* 상위메뉴 오버시 밑줄애니 */
-.uline ul>li>a::after{
-    content: '';
-    display: block;
-    /* position: absolute; */
-    /* 마우스 나갈때 margin-left값 밀기 */
-    margin-left:100%;
-    /* top: 53px; */
-    margin-top: 2px;/* <<밑줄 글자에서 띄우기 */
+.uline ul > li > a::after {
+  content: "";
+  display: block;
+  /* position: absolute; */
+  /* 마우스 나갈때 margin-left값 밀기 */
+  margin-left: 100%;
+  /* top: 53px; */
+  margin-top: 2px; /* <<밑줄 글자에서 띄우기 */
 
-    width: 0;
-    height: 2px;
+  width: 0;
+  height: 2px;
 
-    background-color: white;
-    /* 아웃시 트랜지션 */
-    transition: .3s;
+  background-color: white;
+  /* 아웃시 트랜지션 */
+  transition: 0.3s;
 }
 
 /* 오버시 선나오게 */
-.uline ul>li:hover>a::after{
-    margin-left:0;
-    width: 100%;
-    /* 오버시 트랜지션 ->> margin-left는 트랜지션 적용XXX */
-    transition: width .3s;
+.uline ul > li:hover > a::after {
+  margin-left: 0;
+  width: 100%;
+  /* 오버시 트랜지션 ->> margin-left는 트랜지션 적용XXX */
+  transition: width 0.3s;
 }
 
 /* 메인영역 */
 .main-area {
-    max-width: 1000px;
-    min-height: 600px;
-    line-height: 600px;
-    text-align: center;
-    font-size: 2.5vw;
-    border: 10px dashed lightgreen;
-    margin: 100px auto;
+  max-width: 1000px;
+  min-height: 600px;
+  line-height: 600px;
+  text-align: center;
+  font-size: 2.5vw;
+  border: 10px dashed lightgreen;
+  margin: 100px auto;
+}
+
+.multi-lang a {
+  display: block;
+}
+/* 메뉴 플렉스박스 설정 */
+.multi-lang ul {
+  display: flex;
+}
+.multi-lang ul li{
+    padding: 27px 10px;
+}
+/* 2번째 li 이후 가상요소 없애기 */
+.multi-lang ul li:nth-child(2)~li a::after{
+    display: none;
 }
