--- a/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01_flex.css
@@ -234,9 +234,14 @@ ol::after,
   display: flex;
 }
 .multi-lang ul li{
-    padding: 27px 10px;
+    padding: 27px 5px;
 }
 /* 2번째 li 이후 가상요소 없애기 */
 .multi-lang ul li:nth-child(2)~li a::after{
     display: none;
 }
+.multi-lang ul li:nth-child(2)~li a:hover{
+    color: #fff262;
+}
+
+
