상단메뉴바

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -4,5 +4,10 @@
 /* 공유기능 요소 셋팅 */
 
 /************* 1. 상단영역 *************/
+.mlogo img{
+    margin-top: 30px;
+    margin-left: 10px;
+}
+
 /************ 2. 메인영역 ************/
 /************* 3. 하단영역 *************/
