--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -4,10 +4,52 @@
 /* 공유기능 요소 셋팅 */
 
 /************* 1. 상단영역 *************/
+/* 메인로고 */
 .mlogo img{
     margin-top: 30px;
     margin-left: 10px;
 }
+
+/* 탑메뉴 */
+.top-menu ul {
+    display: flex;
+    justify-content: flex-end;
+}
+/* 탑메뉴 리스트 */
+.top-menu ul li {
+    padding: 0 10px;
+}
+
+/* 탑메뉴 a링크 */
+.top-menu ul a {
+    font-size: 1.4rem;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+/* gnb메뉴 */
+.gnb ul {
+    display: flex;
+    justify-content: flex-end;
+}
+/* gnb 리스트 */
+.gnb ul li {
+    padding: 0 13px;
+}
+
+/* gnb a링크 */
+.gnb ul a {
+    font-size: 1.7rem;
+    line-height: 60px;
+    font-weight: bold;
+}
+/* 마우스 오버시 */
+.gnb ul a:hover {
+    color: red;
+}
+
+
+
 
 /************ 2. 메인영역 ************/
 /************* 3. 하단영역 *************/
