--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/core.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/core.css
@@ -22,6 +22,11 @@ html{
     /* rem단위 계산편의를 위해 */
 }
 
+body{
+    /* 글자체 */
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
 /********* 공통 클래스 *********/
 /* 임시표시타이틀 */
 .temp-tit{
