--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -33,12 +33,15 @@
     justify-content: flex-end;
 }
 /* gnb 리스트 */
-.gnb ul li {
-    padding: 0 13px;
-}
+/* .gnb ul li {
+
+} */
 
 /* gnb a링크 */
 .gnb ul a {
+    display: block;
+    padding: 0 13px;
+
     font-size: 1.7rem;
     line-height: 60px;
     font-weight: bold;
