--- a/001. HTML학습/05.Nav_PJ/css/nav03.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav03.css
@@ -23,9 +23,9 @@ body{
 
 
 /* 공사중 */
-body *{
+/* body *{
     outline: 2px dashed #ccc;
-}
+} */
 
 /* 컨텐츠박스 */
 .cont-box{
@@ -155,3 +155,98 @@ body *{
     color: red; 
 }
 /*********************** 1-3. 기타파트 **********************/
+/* 랭귀지 등 포함박스 */
+.lang{
+    display: flex;
+    padding-top: 40px;
+}
+.lang li{
+    padding: 0 10px;
+}
+.lang a{
+    position: relative;
+   color: #fff;
+}
+
+/* 두번째 a의 kor글자 가상요소로 넣기 */
+.lang li:nth-child(2) a::after{
+    display: block;
+    /* position: absolute; */
+    margin-top: -13px;
+    margin-left: 22px;
+
+    content: 'KOR';
+    font-size: 13px;
+}
+/* 세번째 a의 STORE글자 가상요소로 넣기 */
+.lang li:nth-child(3) a::after{
+    display: block;
+    /* position: absolute; */
+    margin-top: -13px;
+    margin-left: 13px;
+
+    content: 'STORE';
+    font-size: 13px;
+}
+
+/* 박스이미지 */
+.lang img{
+    height: 30px;
+}
+
+/* 오버시 이미지 변경 +글자색변경 */
+
+.lang li:nth-child(1)~li img{
+    display: none;
+}
+.lang li:nth-child(1)~li img:nth-child(1){
+    display: inline;
+}
+
+/* 전체박스에 오버시 첫째 이미지 보이기 */
+#top-area:hover .lang li:nth-child(1) img:nth-child(1){
+    display: inline;
+}
+/* 전체박스에 오버시 듈째 이미지 보이기 */
+#top-area:hover .lang li:nth-child(1)~li img:nth-child(2){
+    display: inline;
+}
+#top-area:hover .lang li:nth-child(1)~li a::after{
+    color: #555;
+}
+/* 첫째이미지 숨기기 */
+#top-area:hover .lang img:nth-child(1){
+    display: none;
+}
+
+
+/* 전체박스에 오버시, dl오버시 둘째 이미지 숨기기 */
+#top-area:hover .lang li:nth-child(1)~li:hover img:nth-child(2){
+    display: none;
+}
+/* 전체박스에 오버시, dl오버시 셋째 이미지 보이기 */
+#top-area:hover .lang li:nth-child(1)~li:hover img:nth-child(3){
+    display: inline;
+}
+#top-area:hover .lang li:nth-child(1)~li:hover a::after{
+    color: red;
+}
+
+/* 선생님이 한 간단한 글씨바꾸기 위는 내가 한거... 간단했네.... */
+/* #top-area:hover .lang a{
+    color:#555;
+}
+#top-area:hover .lang a:hover{
+    color:red;
+} */
+
+
+/* 타이틀 글자 */
+.tit{
+    position: fixed;
+    left: 5vw;
+    top: 20vw;
+    font-size: 4vw;
+    
+    color: #fff;
+}
