--- a/002.CSS학습/05.3DAni/css/cube.css
+++ b/002.CSS학습/05.3DAni/css/cube.css
@@ -16,13 +16,24 @@ body {
   height: 100vh;
 }
 
-/* CSS변수세팅 */
+/* CSS변수세팅
+    :root는 최상위 주소 -> HTML:root를 의미
+    html 요소가 생략되어 표현된 것
+      -> 변수값 변경 애니가 필요한 경우 이점을 활용한다.
+      -> html.클래스명:root{변수값 세팅} -> 변수값이 특정클래스로 변경가능
+*/
 :root {
   /* 큐브공통크기 */
   --cube-size: 300px;
   /* z축 거리나누기 */
   --divide-num: 2;
 }
+
+/* root인 html요소에 클래스를 부여하여 변수값을 변경한다! */
+html.on:root{
+    --divide-num: 1.5;
+}
+
 /* 큐브 */
 .cube {
   /* 부모는 보이는 화면 */
@@ -77,6 +88,8 @@ body {
   border: 2px solid #ccc;
 
   /* outline: 2px dotted blue; */
+  /* z축거리 변경에 대한 트랜지션 애니 설정 */
+  transition: .5s;
 }
 /* 1. 앞면 */
 .cube span:nth-child(1) {
