--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -3,6 +3,26 @@
 /* 도깨비 PJ : 공통 모듈 CSS - common.css */
 /* 공유기능 요소 셋팅 */
 
+/* 0.전체 레이아웃영역별 세팅 */
+/* 1. 상단영역 */
+.top-area{
+    height: 120px;
+}
+/* 2. 배너영역 */
+.ban-area{
+    position: relative;
+    height: 680px;
+}
+/* 2.5.서브파트메뉴 */
+.spart-menu{
+    height: 68px;
+}
+/* 8. 하단영역 */
+.footer-area{
+    height: 371px;
+}
+
+
 /************* 1. 상단영역 *************/
 /* 메인로고 */
 .mlogo img{
@@ -167,6 +187,19 @@
 }
 
 
+
+/* 캐릭터박스 */
+.cat-box{
+    position: absolute;
+    /* 부모 - .ban-area */
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 100%;
+    height: 300px;
+    outline-color: red;
+}
 
 
 /************* 3. 하단영역 *************/
