--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -189,16 +189,34 @@
 
 
 /* 캐릭터박스 */
+/* -> 캐릭터 속박스가 있는 공간을 확보해준다. */
 .cat-box{
     position: absolute;
     /* 부모 - .ban-area */
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 5%;
+    left: 0;
 
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
     outline-color: red;
+}
+
+/* 캐릭터 속박스 - static한 박스(공간차지) */
+.cat-inbox{
+    /* 플랙스박스 */
+    display: flex;
+    /* 가로최대크기 */
+    max-width: 1360px;
+    margin: 0 auto;
+    gap: 0 1vw;
+}
+/* 캐릭터개별박스 등분할 */
+.cat-inbox article{
+    flex: 1;
+}
+/* 캐릭터이미지박스 */
+.imbx img{
+    width: 100%;
 }
 
 
