--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -5,52 +5,51 @@
 
 /* 0.전체 레이아웃영역별 세팅 */
 /* 1. 상단영역 */
-.top-area{
-    height: 120px;
+.top-area {
+  height: 120px;
 }
 /* 2. 배너영역 */
-.ban-area{
-    position: relative;
-    height: 680px;
+.ban-area {
+  position: relative;
+  height: 680px;
 }
 /* 2.5.서브파트메뉴 */
-.spart-menu{
-    height: 68px;
+.spart-menu {
+  height: 68px;
 }
 /* 8. 하단영역 */
-.footer-area{
-    height: 371px;
+.footer-area {
+  height: 371px;
 }
-
 
 /************* 1. 상단영역 *************/
 /* 메인로고 */
-.mlogo img{
-    margin-top: 30px;
-    margin-left: 10px;
+.mlogo img {
+  margin-top: 30px;
+  margin-left: 10px;
 }
 
 /* 탑메뉴 */
 .top-menu ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 /* 탑메뉴 리스트 */
 .top-menu ul li {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 
 /* 탑메뉴 a링크 */
 .top-menu ul a {
-    font-size: 1.4rem;
-    line-height: 40px;
-    font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 40px;
+  font-weight: bold;
 }
 
 /* gnb메뉴 */
 .gnb ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 /* gnb 리스트 */
 /* .gnb ul li {
@@ -59,192 +58,220 @@
 
 /* gnb a링크 */
 .gnb ul a {
-    display: block;
-    padding: 0 13px;
+  display: block;
+  padding: 0 13px;
 
-    font-size: 1.7rem;
-    line-height: 60px;
-    font-weight: bold;
+  font-size: 1.7rem;
+  line-height: 60px;
+  font-weight: bold;
 }
 /* 마우스 오버시 */
 .gnb ul a:hover {
-    color: red;
+  color: red;
 }
-
 
 /* 상위메뉴 서브가 있는 리스트 선택하기 (4~6까지) */
 /* a요소 오버시 커서 변경 */
-.gnb ul li:nth-child(3)~li:nth-child(-n+6) a{
-    /* 손가락표시 defalt */
-    cursor: default;
+.gnb ul li:nth-child(3) ~ li:nth-child(-n + 6) a {
+  /* 손가락표시 defalt */
+  cursor: default;
 }
 /* 가상요소로 아래쪽 화살표 넣기 */
-.gnb ul>li:nth-child(3)~li:nth-child(-n+6)>a::after{
-    content: '∨';
-    display: inline-block;
-    /* transform은 inline에서는 적용안됨 */
-    font-size: 7px;
-    margin-left: 8px;
-    vertical-align: 2px;
-    transform: scaleX(2);
+.gnb ul > li:nth-child(3) ~ li:nth-child(-n + 6) > a::after {
+  content: "∨";
+  display: inline-block;
+  /* transform은 inline에서는 적용안됨 */
+  font-size: 7px;
+  margin-left: 8px;
+  vertical-align: 2px;
+  transform: scaleX(2);
 }
 
 /* 서브메뉴 */
-.smenu{
-    /* 부모 : 보이는 화면 */
-    position: absolute;
-    left: 0;
-    width: 100%;
+.smenu {
+  /* 부모 : 보이는 화면 */
+  position: absolute;
+  left: 0;
+  width: 100%;
 
-    z-index: 1;
-    background-color: #fff;
+  z-index: 1;
+  background-color: #fff;
 
-    /* 서브메뉴 숨기기 */
-    max-height: 0;
-    overflow: hidden;
-    /* 트랜지션 */
-    
-    transition: .3s;
+  /* 서브메뉴 숨기기 */
+  max-height: 0;
+  overflow: hidden;
+  /* 트랜지션 */
+
+  transition: 0.3s;
 }
-.gnb>ul>li:hover .smenu{
-    max-height: 50vh;
-    transition: .3s .3s;
+.gnb > ul > li:hover .smenu {
+  max-height: 50vh;
+  transition: 0.3s 0.3s;
 }
 
-.smenu h2{
-    font-size: 3rem;
+.smenu h2 {
+  font-size: 3rem;
 }
 
 /* 서브속박스 */
-.swrap{
-    width: 60vw;
-    margin: 0 auto;
-    padding: 3rem;
-    white-space: nowrap;
-    padding: 4.9rem 12.8rem 6rem;
+.swrap {
+  width: 60vw;
+  margin: 0 auto;
+  padding: 3rem;
+  white-space: nowrap;
+  padding: 4.9rem 12.8rem 6rem;
 }
 
 /* ol리스트 */
-.smenu ol{
-    /* 플렉스박스 */
-    display: flex;
-    /* 플렉스 랩핑박스 */
-    flex-wrap: wrap;
-    /* justify-content: center; */
-    /* 플렉스박스 간격 속성 - gap: 위아래 양쪽 
+.smenu ol {
+  /* 플렉스박스 */
+  display: flex;
+  /* 플렉스 랩핑박스 */
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* 플렉스박스 간격 속성 - gap: 위아래 양쪽 
         -> 하나의 값만 쓰면 모두 세팅 */
-    gap: 1rem 2vw;
+  gap: 1rem 2vw;
 }
-
-
-
-
 
 /************ 2. 메인영역 ************/
 /* 2-1. 배너영역 */
 
 /* 슬라이드 박스 */
-.slide-box{
-    width: 100%;
-    height: 100%;
+.slide-box {
+  width: 100%;
+  height: 100%;
 }
 /* 슬라이더 - 움직이는 박스 */
-.slider{
-    position: relative;
-    /* 슬라이드 위치이동 초기값 */
-    left: 0;
-    /* 하위 li를 옆으로 흐르게 */
-    display: flex;
+.slider {
+  position: relative;
+  /* 슬라이드 위치이동 초기값 */
+  left: 0;
+  /* 하위 li를 옆으로 흐르게 */
+  display: flex;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
-.slider li{
-    flex-basis: 100%; /* 플렉스에서 쓰는 width랑 같은거 */
-    /* 부모크기만큼 옆으로 나가게 하려면 flex-shrink 기본값 1을 0으로 변경
+.slider li {
+  flex-basis: 100%; /* 플렉스에서 쓰는 width랑 같은거 */
+  /* 부모크기만큼 옆으로 나가게 하려면 flex-shrink 기본값 1을 0으로 변경
         1의 의미는 자동으로 부모크기에 맞추어 줄어듬
         0의 의미는 설정된 부모만큼 늘어남 */
-    flex-shrink: 0;
+  flex-shrink: 0;
 
-    /* 공통배경설정 */
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
+  /* 공통배경설정 */
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 /* 슬라이드 01 */
-.sum-01{
-    background-image: url(../images/bg_main_01.jpg);
-
+.sum-01 {
+  background-image: url(../images/bg_main_01.jpg);
 }
-.sum-02{
-    background-image: url(../images/bg_main_02.jpg);
-
+.sum-02 {
+  background-image: url(../images/bg_main_02.jpg);
 }
-.sum-03{
-    background-image: url(../images/bg_main_03.jpg);
-
+.sum-03 {
+  background-image: url(../images/bg_main_03.jpg);
 }
-
-
 
 /* 캐릭터박스 */
 /* -> 캐릭터 속박스가 있는 공간을 확보해준다. */
-.cat-box{
-    position: absolute;
-    /* 부모 - .ban-area */
-    bottom: 5%;
-    left: 0;
+.cat-box {
+  position: absolute;
+  /* 부모 - .ban-area */
+  bottom: 5%;
+  left: 0;
 
-    width: 100%;
-    /* height: 300px; */
-    outline-color: red;
+  width: 100%;
+  /* height: 300px; */
+  outline-color: red;
 }
 
 /* 캐릭터 속박스 - static한 박스(공간차지) */
-.cat-inbox{
-    /* 플랙스박스 */
-    display: flex;
-    gap: 0 1vw;
+.cat-inbox {
+  /* 플랙스박스 */
+  display: flex;
+  gap: 0 1vw;
 
-    /* 가로최대크기 */
-    max-width: 1360px;
-    margin: 0 auto;
-    padding: 0 1vw;
-
-
+  /* 가로최대크기 */
+  max-width: 1360px;
+  margin: 0 auto;
+  padding: 0 1vw;
 }
 /* 캐릭터개별박스 등분할 */
-.cat-inbox article{
-    flex: 1;
+.cat-inbox article {
+  flex: 1;
 }
 /* 캐릭터이미지박스 */
-.imbx img{
-    width: 100%;
+.imbx img {
+  width: 100%;
 }
 
 /* 캐릭터 이름이미지 박스 */
-.iname{
-    display: block;
-    margin-top: -19px;
-    /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기 */
-    text-align: center;
+.iname {
+  display: block;
+  margin-top: -19px;
+  /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기 */
+  text-align: center;
 }
 /* 캐릭터 이름 이미지 */
-.iname img{
-    width: 40%;
+.iname img {
+  width: 40%;
 }
 /* 두번째이미지 숨기기 */
-.iname img:nth-child(2){
-    display: none;
+.iname img:nth-child(2) {
+  display: none;
 }
 /* 오버시 두번재 이미지 보이기 */
-.cat-inbox article:hover .iname img:nth-child(2){
-    display: inline;
+.cat-inbox article:hover .iname img:nth-child(2) {
+  display: inline;
 }
 /* 오버시 첫번재 이미지 숨이기 */
-.cat-inbox article:hover .iname img:nth-child(1){
-    display: none;
+.cat-inbox article:hover .iname img:nth-child(1) {
+  display: none;
+}
+
+/* 캐릭터 설명박스 */
+.descbx {
+  height: 0;
+  /* 넘치는 자식요소auto일 경우
+  정해진 크기보다 넘치는 세로 스크롤만 생김! */
+  overflow: auto;
+  background: url(../images/eachBG.jpg) no-repeat bottom/cover;
+
+  transition: .4s ease-in-out;
+}
+/* 상위캐릭터 개별박스에 오버시 설명박스 보이기 */
+.cat-inbox article:hover .descbx{
+    height: 200px;
+}
+
+/* 상위캐릭터 개별박스에 오버시 이미지박스 트랜지션 설명박스와 동일하게 설정하기 */
+.cat-inbox article .imbx{
+    transition: .4s ease-in-out;
+}
+/* 상위캐릭터 개별박스에 오버시 이미지박스 마이너스 마진으로 위로 올리기 */
+.cat-inbox article:hover .imbx{
+    margin-top: -200px;
+}
+
+/* 캐릭터 타이틀 */
+.descbx h3 {
+  font-family: "Gugi";
+  font-size: 2.4rem;
+  font-weight: normal;
+  padding: 15px 10px 5px;
+  letter-spacing: -1px;
+}
+.descbx p {
+  font-family: "Single Day", "ZCOOL KuaiLe";
+  font-size: 1.8rem;
+  line-height: 1.6;
+  padding: 1.5rem;
+  text-align: justify;
 }
 
 
