--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -244,31 +244,41 @@
 
   transition: .4s ease-in-out;
 }
-/* 상위캐릭터 개별박스에 오버시 설명박스 보이기 */
-.cat-inbox article:hover .descbx{
-    height: 200px;
+/* 상위 캐릭터 개별박스에 오버시 설명박스 보이기 */
+.cat-inbox article:hover .descbx {
+  padding-top: 55%;
 }
 
-/* 상위캐릭터 개별박스에 오버시 이미지박스 트랜지션 설명박스와 동일하게 설정하기 */
-.cat-inbox article .imbx{
-    transition: .4s ease-in-out;
-}
-/* 상위캐릭터 개별박스에 오버시 이미지박스 마이너스 마진으로 위로 올리기 */
-.cat-inbox article:hover .imbx{
-    margin-top: -200px;
-}
 
+/***************** 비율 유지하게 박스 하나씩만 올라가게함 *****************/
+
+/* 상위 캐릭터 개별박스에 오버시 이미지박스 트랜지션
+설명박스와 동일하게 설정하기 */
+.cat-inbox article .imbx {
+  transition: .4s ease-in-out;
+}
+/* 상위 캐릭터 개별박스에 오버시 이미지박스 마이너스
+마진으로 위로 올리기 + 캐릭터 타이틀 마진탑도 */
+.cat-inbox article:hover .imbx,
+.cat-inbox article:hover .descbx h3{
+  margin-top: -55%;
+}
 /* 캐릭터 타이틀 */
-.descbx h3 {
-  font-family: "Gugi";
-  font-size: 2.4rem;
+.descbx h3{
+  margin-top: 0;
+  font-family: 'Gugi';
+  /* 글자크기 최대 2.4rem 기타는 2vw */
+  font-size: min(2.4rem,2vw);
   font-weight: normal;
   padding: 15px 10px 5px;
   letter-spacing: -1px;
+  transition: margin-top .4s ease-in-out;
 }
+
+
 .descbx p {
   font-family: "Single Day", "ZCOOL KuaiLe";
-  font-size: 1.8rem;
+  font-size: min(1.8rem, 1.3vw);
   line-height: 1.6;
   padding: 1.5rem;
   text-align: justify;
