버튼 마우스 따라다니기

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -139,8 +139,37 @@
 
 /* 슬라이드 박스 */
 .slide-box {
+  position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+/* 이벤트 커버박스 */
+.evt-cover{
+  position: absolute;
+  /* 사방 땡기기 - 전부 끝에 닿게 함 */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  display: flex;
+}
+/* 양분박스 aside */
+.evt-cover aside{
+  flex: 1;
+}
+/* 버튼요소 */
+.abtn{
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 0 5px #000;
+  z-index: 99;
+  display: none; /* 처음에 숨기기 */
 }
 /* 슬라이더 - 움직이는 박스 */
 .slider {
