--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -9,22 +9,15 @@
     font-family: 'Cute Font', cursive;
     font-family: 'Jua', sans-serif;
 */
+/* 리셋 CSS */
+@import url(./reset.css);
 
-
-/* 초기화 */
-html,body,h1,h2,ul,ol{
-    margin: 0;
-    padding: 0;
-}
-ul,ol{
-    list-style: none;
-}
 body{
     background-color: #000;
 }
 /********************************* 공사중 *********************************/
 body *{
-    outline:2px dashed yellow;
+    /* outline:2px dashed yellow; */
 }
 
 /* 공통클래스 */
@@ -36,6 +29,8 @@ body *{
 
 /********************************* 1.상단영역 *********************************/
 .top-area{
+    /* 부모자격-.gnb */
+    position: relative;
     height: 80px;
     background: url(../images/curtain.jpg) repeat-x;
 }
@@ -45,6 +40,19 @@ body *{
     color: aquamarine;
     line-height: 80px;
     text-align: center;
+}
+
+/* 1-2. gnb메뉴 */
+.gnb{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+.gnb ul{
+    display: flex;
+    gap: 0 1.5rem;
+    font-family: 'Jua', sans-serif;
+    font-style: 2rem;
 }
 /********************************* 2.메인영역 *********************************/
 .main-area{
