--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/common.css
@@ -213,6 +213,40 @@
   background-image: url(../images/bg_main_03.jpg);
 }
 
+/* 블릿박스 */
+.indic-box{
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  width: 450px;
+  height: 5px;
+  z-index: 9;
+}
+.indic{
+  display: flex;
+  gap: 0 15px;
+}
+.indic li{
+  width: 150px;
+  height: 5px;
+  background-color: #ffffff77;
+}
+/* 가상요소 바 */
+.indic li::before{
+  content: '';
+  display: block;
+  width: 0%;
+  height: 5px;
+  background-color: red;
+  transition: width 3s linear;
+}
+
+/* li.on일 경우 가상요소 width 변경 */
+.indic li.on::before{
+  width: 100%;
+
+}
+
 /* 캐릭터박스 */
 /* -> 캐릭터 속박스가 있는 공간을 확보해준다. */
 .cat-box {
