--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -144,7 +144,7 @@ body *{
 .cam{
     position: absolute;
     top: -10px;
-    left: 100%;
+    right: -53px;
 }
 .cam img{
     width: 50px;
@@ -195,7 +195,7 @@ body *{
     top: -15px;
     right: 120px;
 
-    width: 129px;
+    width: 0%;/* 오버시 129px */
     height: 66px;
     background:url(../images/screen.gif) no-repeat -10% center/auto 80%;
     z-index: -2;
@@ -205,6 +205,7 @@ body *{
 /* 오버시 스크린 보이기 */
 .gnb:hover .cam::after{
     opacity: 1;
+    width: 129px;
     transition: opacity .3s .6s;
 }
 /********************************* 2.메인영역 *********************************/
