방금것과 같은 내용
미디어.css 에 46줄

--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -42,7 +42,8 @@
   .cam {
     top: -62px;
     right: -12px;
-    padding-bottom: 20px;
+    /* 하단 gnb와 오버시 연결필요! */
+    padding-bottom: 10px;
   }
 }
 /******* 1024px 이하 미디어쿼리 종료 *******/
