--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -14,8 +14,8 @@
 
 /******* 1024px 이하 미디어쿼리 시작 *******/
 @media screen and (max-width: 1024px) {
-/* GNB메뉴 위치 및 배치 변경하기 */
-.gnb {
+  /* GNB메뉴 위치 및 배치 변경하기 */
+  .gnb {
     /* 기존 위치 기준을 auto로 초기화하고 새로운 기준인 top값을 줌 */
     bottom: auto;
     top: 81px;
@@ -28,10 +28,10 @@
     height: 0;
     overflow: hidden;
 
-    transition: height .4s ease-in-out;
+    transition: height 0.4s ease-in-out;
   }
   /* GNB오버시 ul보이기 */
-  .gnb:hover ul{
+  .gnb:hover ul {
     height: 127px;
   }
   /* 서브메뉴 오버시 숨기기 */
@@ -47,3 +47,32 @@
   }
 }
 /******* 1024px 이하 미디어쿼리 종료 *******/
+
+/******* 810px 이하 미디어쿼리 시작 *******/
+@media screen and (max-width: 810px) {
+  .footer-area {
+    gap: 20px;
+    flex-direction: column;
+    text-align: center;
+  }
+  /* 3-3.SNS */
+  .sns-box {
+    margin-left: 0;
+  }
+  /* 포스터 리스트 */
+  .poster-menu ul {
+    flex-wrap: wrap;
+  }
+  /* 상위 ul>li 리스트 */
+  .poster-menu > ul > li {
+
+    /* 100%를 3등분에 사이값 15px 2개를 빼줌 */
+    flex-basis: calc(100% / 3 - 15px * 2);
+  }
+}
+/******* 810px 이하 미디어쿼리 종료 *******/
+
+/******* 810px 이하 미디어쿼리 시작 *******/
+@media screen and (max-width: 810px) {
+}
+/******* 810px 이하 미디어쿼리 종료 *******/
