CGV - 아까 식으로 하면 옆에가 남아 그거 없었음
포스터메뉴 gab을 px에서 %로 변경하고
계산식도 아래처럼 바꿈 (미디어쿼리 70줄)
flex-basis: calc(100% / 3 - 1.4%);

--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -256,7 +256,7 @@ body *{
 .poster-menu ul{
     /* float: left; */
     display: flex;
-    gap : 0 15px;
+    gap : 0 2%;
     /* 원근설정 : 하위 li에 적용 */
     perspective: 100vh;
 }
