--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -62,11 +62,12 @@
   /* 포스터 리스트 */
   .poster-menu ul {
     flex-wrap: wrap;
+    gap: 0 2%;
   }
   /* 상위 ul>li 리스트 */
   .poster-menu > ul > li {
 
-    /* 100%를 3등분에 사이값 15px 2개를 빼줌 */
+    /* 100%를 3등분한 갭값 2%에서 오른쪽에 남는 갭을 등분할한 적당한 수치인 1.4%를 빼줌 */
     flex-basis: calc(100% / 3 - 1.4%);
   }
 }
