--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -50,6 +50,20 @@
 
 /******* 810px 이하 미디어쿼리 시작 *******/
 @media screen and (max-width: 810px) {
+    /* 비율변경, 배경조정 */
+  .main-area {
+    aspect-ratio: 1/1.25;
+    /* 극장이미지 배경 */
+    background: url(../images/bg.jpg) no-repeat center -37%/148%;
+  }
+  /* 2-1.스크린 크기,위치 조정*/
+  .screen {
+    top: 5.1%;
+    left: 7.7%;
+    width: 86.4%;
+    height: 39.3%;
+  }
+
   .footer-area {
     gap: 20px;
     flex-direction: column;
@@ -66,10 +80,18 @@
   }
   /* 상위 ul>li 리스트 */
   .poster-menu > ul > li {
-
     /* 100%를 3등분한 갭값 2%에서 오른쪽에 남는 갭을 등분할한 적당한 수치인 1.4%를 빼줌 */
     flex-basis: calc(100% / 3 - 1.4%);
-  }
+  
+}
+/* 포스터 영화정보 글자크기 */
+.mv-info ol li:first-child{
+font-size: 3.3vw;
+}
+
+.mv-info ol{
+    font-size: 3vw;
+}
 }
 /******* 810px 이하 미디어쿼리 종료 *******/
 
