--- a/003.JS학습/01.JS실험실/css/show_letter2.css
+++ b/003.JS학습/01.JS실험실/css/show_letter2.css
@@ -4,16 +4,24 @@
 body {
     background-color: darkslateblue;
 }
+/* 타이틀 */
+.tit{
+    color: white;
+    text-align: center;
+    font-size: 4vw;
+    line-height: 100vh;
+}
 /* 글자스테이지 */
 .stage-letters {
-    position: fixed;
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 50vh;
+    
     /* 플렉스박스 */
     display: flex;
     flex-wrap: wrap;
     width: 70vw;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
     outline: 2px dashed yellow;
 
     /* 글자설정 */
