도깨비 - 인트로영역
부드러운 스크롤 추가
인트로 영역 html,css추가 - core,main

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -13,7 +13,7 @@ body * {
     /* outline: 2px dashed #ccc; */
 }
 
-/* 3. 인트로영역 */
+/******************************* 3. 인트로영역 *******************************/
 .intro-area{
     height: 575px;
 }
@@ -57,7 +57,7 @@ body * {
     font-weight: bold;
 }
 
-/* 4. 미리보기영역 */
+/******************************* 4. 미리보기영역 *******************************/
 .preview-area{
     height: 803px;
 }
