/* 메인영역 col-박스 */
.main-area [class*='col-'] < core

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/core.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/core.css
@@ -63,6 +63,11 @@ body{
 
 }
 
+/* 메인영역 col-박스 */
+.main-area [class*='col-']{
+    padding: 10px;
+}
+
 /* 공통 서브타이틀 */
 .stit{
     padding-bottom: 32px;
