--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -57,19 +57,53 @@ body * {
     font-weight: bold;
 }
 
+
+
 /******************************* 4. 미리보기영역 *******************************/
 .preview-area{
     height: 803px;
 }
-/* 5. 현장포토영역 */
+/* 인트로 동영상 박스 */
+.intro-mv-img{
+    position: relative;
+    /* 부모자격 */
+    aspect-ratio: 2/1.1;
+}
+/* 가상요소로 플레이버튼 만들기 */
+.intro-mv-img.off::after{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 72px;
+    height: 72px;
+    background: url(../images/icon_play.png) no-repeat;
+    cursor: pointer;
+}
+
+/* 하위 이미지/동영상 */
+.intro-mv-img img,
+.intro-mv-img video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+/* 동영상 설명박스 */
+.intro-mv-box figcaption{
+    font-size: 2rem;
+    padding-top: 10px;
+}
+/**************************** 5. 현장포토영역 ****************************/
 .real-photo-area{
     height: 1043px;
 }
-/* 6. 대표이미지 영역 */
+/**************************** 6. 대표이미지 영역 ****************************/
 .main-photo-area{
     height: 731px;
 }
-/* 7. 최신동영상영역 */
+/**************************** 7. 최신동영상영역 ****************************/
 .clip-video-area{
     height: 548px;
 }
