도깨비 - 미리보기영역
사진클릭시 동영상태그 넣어서 동영상 재생 + 플레이버튼 안나오게

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -69,7 +69,10 @@ body * {
     /* 부모자격 */
     aspect-ratio: 2/1.1;
 }
-/* 가상요소로 플레이버튼 만들기 */
+/* 가상요소로 플레이버튼 만들기 
+-> .off를 준 경우에만 가상요소 버튼 보임 
+따라서 비디오 태그를 넣을 경우 .off를 지울 것
+*/
 .intro-mv-img.off::after{
     content: '';
     position: absolute;
