미리보기 구현 코드 랩핑구역
-> 목적 : 변수,함수 충돌방지

// 실제코드 : (()=>{코드})
// 실제코드 : (function()=>{코드})

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -130,6 +130,15 @@ body * {
     margin-top: 1.4rem;
     color: #00000099;
     line-height: 1.7;
+
+    /* 여러줄 말줄임표하기 */
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* 보여줄 라인 수 세팅 속성 */
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+
 }
 /* 리스트 박스 오버스 내용 글자색 */
 .preview-box li p{
