--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -180,7 +180,43 @@ body * {
 }
 /**************************** 6. 대표이미지 영역 ****************************/
 .main-photo-area{
-    height: 731px;
+    /* height: 731px; */
+}
+/* 대표이미지 그리드박스 */
+.poster-box ul {
+    display: grid;
+    /* 4개 컬럼 동일비율 세팅 */
+    grid-template-columns: repeat(4, 1fr);
+    /* 사이간격 */
+    gap: min(20px,1.2vw);
+}
+/* 대표이미지 리스트 */
+.poster-box li{
+    cursor: pointer;
+}
+/* 대표이미지 grid-row세팅하기
+-> 2줄로 세팅하려면 줄번호가 3번이 끝번호임 */
+.poster-box li:nth-child(1){
+    grid-row: 1/2;
+}
+/* 2번째부터 4번째까지 선택 */
+.poster-box li:nth-child(1)~li:nth-child(-n+4){
+    grid-row: 1/3;
+}
+/* 다음줄 첫번째 li가 올라옴 */
+.poster-box li:nth-child(5){
+    grid-row: 2/3;
+}
+/* 이미지 */
+.poster-box img{
+    border-radius: 6px;
+    width: 100%;
+
+}
+/* 이미지 타이틀 */
+.poster-box figcaption{
+    font-size: 2rem;
+    padding-top: 1.4rem;
 }
 /**************************** 7. 최신동영상영역 ****************************/
 .clip-video-area{
