--- a/003.JS학습/01.JS실험실/css/ban_style1.css
+++ b/003.JS학습/01.JS실험실/css/ban_style1.css
@@ -91,6 +91,13 @@ ol {
     220%임 -> 하나당 110%  */
     width: 100%;
     height: 100%;
+    
+    /* 트렌지션, 애니메이션이 버벅일때 변경요소를 미리 세팅하게 설정하는 속성
+    will-change:변경속성 을 세팅한다
+    예) will-change: left,top,width;
+
+     */
+    will-change: left;
 }
 
 .slide li {
