--- a/001. HTML학습/05.Nav_PJ/css/nav06.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav06.css
@@ -165,3 +165,19 @@ html,body{
     opacity: 1;
     /*우선적용!*/
 }
+
+
+
+
+/* 서브컨텐츠 */
+.sub-cont{
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 500px;
+    padding: 50px 0;
+}
+.sub-cont>div{
+    flex: 1;
+    outline: 2px dashed lightblue;
+}
