--- a/001. HTML학습/05.Nav_PJ/css/nav06.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav06.css
@@ -3,29 +3,13 @@
 /* 외부CSS합치기 */
 @import url(./reset.css);
 @import url(./common.css);
+/* 드래그 슬라이드 CSS */
+@import url(./drag_slide.css);
 
 /* 네비게이션 유형6 CSS - nav06.css */
 html,
 body {
   overflow-x: hidden;
-}
-
-/* 배너전체박스 */
-.banbx {
-  /*슬라이드부모*/
-  position: relative;
-  margin-top: 50px;
-  /* 부모는? .page */
-  /* top: 50%;
-    transform: translateY(-50%); */
-  /* 세로중앙! */
-  left: 25vw;
-  width: 50vw;
-  aspect-ratio: 1/0.55;
-  /* border: 2px solid red; */
-  box-sizing: border-box;
-
-  /* outline: 5px dotted blue; */
 }
 
 /* 가상요소로 드래그 막기 장치 */
@@ -92,6 +76,11 @@ body {
   height: 100%;
   object-fit: cover;
   /* 이미지 비율유지 채우기! */
+}
+/* 이동버튼, 불릿 -> .controls
+부모박스에 클래스 no가 적용될 경우 컨트롤스는 모두 이벤트 통과 */
+.no .controls{
+pointer-events: none;
 }
 
 /*이동버튼*/
