도깨비 pj - 리스트 양끝 튕기기

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -9,7 +9,7 @@
 @import url(./grid_12_flex.css);
 
 /* 드래그 슬라이드 CSS */
-@import url(./drag_slide.css);
+/* @import url(./drag_slide.css); */
 
 /* 공사중 표시 */
 body * {
@@ -222,23 +222,29 @@ body * {
     padding-top: 1.4rem;
 }
 /**************************** 7. 최신동영상영역 ****************************/
+/************** 7. 최신동영상영역 **************/
 .clip-video-area{
-position: relative;
-/* 부모자격 - 이동버튼 부모 */
-    /* height: 548px; */
+    position: relative;
+    /* 부모자격 - 이동버튼의 부모 */
 }
 .clip-box ul {
     position: relative;
     left: 0;/* 이동초기값 */
     display: flex;
-    gap: 0 2%;
+    /* gap: 0 2%; */
     /* 트랜지션 */
-    transition: left .4s ease-in-out;
+    transition: left .3s ease-out;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
-.clip-box li {
-    flex-basis: calc(25.5% - 2%);
+.clip-box li {    
+    flex-basis: 25%;
     flex-shrink: 0;
+    /* 플렉스 gap 속성대신 패딩으로 처리
+    >>이유는 드래그 시 영역아웃 현상 때문 */
+    padding: 0 1.1%;
+    box-sizing: border-box;
 }
 
 /* 동영상 이미지박스 */
@@ -250,6 +256,8 @@ position: relative;
 .clip-mv-box img {
     width: 100%;
     border-radius: 6px;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 /* 동영상 이미지박스 가상요소로 플레이버튼 */
 .clip-mv-box::after {
@@ -268,19 +276,22 @@ position: relative;
     font-size: 18px;
     font-weight: normal;
 
-    /* 2줄 밑줄임 세팅 */
+    /* 2줄 말줄임 셋팅 */
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .clip-box h3 {
     font-size: 15px;
     font-weight: normal;
     color: #555;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .clip-box {
@@ -314,6 +325,3 @@ position: relative;
     right: -35px;
     display: none;
 }
-
-
-
