클릭이 안돼서 가져옴
html 문제였던거 같음

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -316,12 +316,14 @@ body * {
 }
 /* 왼쪽버튼 */
 .btn-box button:first-child{
-    left: -35px;
+    left: 0px;
     /* 처음에 안보임 */
     display: none;
 }
 /* 오른쪽버튼 */
 .btn-box button:last-child{
-    right: -35px;
-    display: none;
+    right: 0px;
+    /* display: none; */
 }
+
+/* 클래스를 추가하여 한쪽버튼만 안보이게 처리 */
