보그프로젝트

--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common.css
@@ -4,5 +4,18 @@
 
 /**************************************** 상단영역 **************************************/
 
+.top-area{
+    /* 최소높이 */
+    min-height: 206px;
+}
 /**************************************** 메인영역 **************************************/
+.main-area{
+    /* 최소높이 - 컨텐츠가 작을 경우 대비 */
+    min-height: 600px;
+
+}
 /**************************************** 하단영역 **************************************/
+.footer-area{
+    /* 최소높이 */
+    min-height: 285px;
+}
